corrected overflow in mobile navigation

--- a/src/components/MobileNavigation/MobileNavigation.scss
+++ b/src/components/MobileNavigation/MobileNavigation.scss
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
+
 
   @include onTablet {
     display: none;
@@ -33,21 +35,20 @@
   }
 
   &__box {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: 60px;
     left: 0;
-    display: flex;
-    flex-direction: column;
-
-    z-index: 999;
 
     width: 100%;
     height: calc(100vh - 60px);
 
-    padding: 60px 20px;
+    padding: 20px;
+    z-index: 100;
+    overflow-y: scroll;
     
     background-color: $main-grey;
-
   }
 
   &__list {
